fix lb composer place holder color for improved color contrasts

--- a/styles/liveblocks/index.css
+++ b/styles/liveblocks/index.css
@@ -62,7 +62,7 @@
 }
 
 .lb-composer-editor :where([data-placeholder]) {
-  color: #dfdfdf;
+  color: #b0b0b0;
 }
 
 .lb-composer-editor {
